tests/type-errors/08-condition-not-bool.flt
// If condition must be bool
// --- Command: dotnet run --project FunLang -- --emit-type --expr "if 1 then 2 else 3" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0301]: Type mismatch: expected int but got bool
 --> <expr>:1:0-18
   = hint: Check that all branches of your expression return the same type
